# dev-workflow

./: .envrc  .gitignore  .mise.toml  CLAUDE.md  DESIGN.md  HOW_TO.md  README.md  agentic-workflow-spec-superpowers.md  agentic-workflow-spec-taskmaster.md  pyproject.toml
claude_plugin/: README.md  config.toml  plugin.json
claude_plugin/.claude-plugin/: marketplace.json  plugin.json
claude_plugin/commands/: run-stage.md  stage-approve.md  stage-review.md  task-list.md  task-search.md  task-start.md  task-status.md  task-switch.md
docs/: DESIGN.md  agent-task-continuity-prd.md  agentic-workflow-spec.md
docs/superpowers/specs/: 2026-04-11-dev-workflow-checkpoint-architecture-design.md  2026-04-11-dev-workflow-continuity-layer-design.md  2026-04-11-dev-workflow-prd.md
skills/: task-awareness.md  task-checkpoint.md
src/dev_workflow/: __init__.py  checkpoint.py  cli.py  config.py  errors.py  exceptions.py  models.py  plan_parser.py  progress.py  resume.py  slug.py  space.py  stage.py  state.py  store.py  task.py  templates.py  views.py
src/dev_workflow/templates/: implementation-plan.md  progress.md  review.md  spec.md  subtask.md
tests/: conftest.py  test_checkpoint.py  test_cli.py  test_config.py  test_integration.py  test_models.py  test_plan_parser.py  test_progress.py  test_slug.py  test_space.py  test_stage.py  test_state.py  test_store.py  test_task.py  test_templates.py  test_views.py
