[project]
name = "dev-workflow"
version = "0.1.0"
description = "Checkpoint-oriented task continuity for agent-assisted development"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
]

[project.scripts]
dev-workflow = "dev_workflow.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dev_workflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
